Profile with no backend

--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -56,9 +56,8 @@
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
-                            <div class="col-12">
-                                <span class="icon-done"></span>
-                                <span>Bạn đã đồng ý với điều khoản của chúng tôi</span>
+                            <div class="col-12 text-center">
+                                <strong>MASTER</strong>
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
@@ -68,16 +67,16 @@
                                      aria-orientation="vertical">
                                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
                                        href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-                                       aria-selected="true">Home</a>
+                                       aria-selected="true">Thông tin</a>
                                     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
                                        href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-                                       aria-selected="false">Profile</a>
+                                       aria-selected="false">Thống kê</a>
                                     <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
                                        href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-                                       aria-selected="false">Messages</a>
+                                       aria-selected="false">Chương trình liên kết</a>
                                     <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
                                        href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-                                       aria-selected="false">Settings</a>
+                                       aria-selected="false">Cài đặt</a>
                                 </div>
                             </div>
                         </div>
@@ -117,42 +116,132 @@
                                     <div class="progress-bar" style="width:80%"></div>
                                 </div>
                                 <p class="mb-3">Còn 7 tới cấp tiếp theo</p>
-                                <label class="font-weight-bold">Quyền lợi</label>&nbsp;&nbsp;<small>Cấp càng cao, bạn càng tiết kiệm chi phí!</small>
+                                <label class="font-weight-bold">Quyền lợi</label>&nbsp;&nbsp;<small>Cấp càng cao, bạn
+                                càng tiết kiệm chi phí!</small>
                                 <p class="mb-0">Hiện bạn được giảm <strong>5%</strong> phí. Cảm ơn rất nhiều!</p>
                                 <p class="mb-0">Bạn thuộc hàng chờ ưu tiên <strong>cao</strong></p>
                             </div>
 
-                            <div class="border rounded p-4 bg-white">
-                                <h2 class="h5">Telecommunication Manager</h2>
-                                <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span>
-                                </p>
-                                <p>
-                                    <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>
-                                    <span class="d-block"><span class="icon-room"></span> Florida</span>
-                                    <span class="d-block"><span
-                                        class="icon-money mr-1"></span> $55000 &mdash; 70000</span>
-                                </p>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid at
-                                    ipsum commodi hic, cum esse asperiores libero molestiae, perferendis consectetur
-                                    assumenda iusto, dolorem nemo maiores magnam illo laborum sit, dicta.</p>
-                            </div>
+<!--                            <div class="border rounded p-4 bg-white">-->
+<!--                                <h2 class="h5">Telecommunication Manager</h2>-->
+<!--                                <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span>-->
+<!--                                </p>-->
+<!--                                <p>-->
+<!--                                    <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>-->
+<!--                                    <span class="d-block"><span class="icon-room"></span> Florida</span>-->
+<!--                                    <span class="d-block"><span-->
+<!--                                        class="icon-money mr-1"></span> $55000 &mdash; 70000</span>-->
+<!--                                </p>-->
+<!--                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid at-->
+<!--                                    ipsum commodi hic, cum esse asperiores libero molestiae, perferendis consectetur-->
+<!--                                    assumenda iusto, dolorem nemo maiores magnam illo laborum sit, dicta.</p>-->
+<!--                            </div>-->
 
                         </div>
 
                     </div>
                     <div class=" col-md-12 panel panel--spaced panel--with-overflow tab-content"
                          id="v-pills-tabContent">
-                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
-                             aria-labelledby="v-pills-home-tab">...
+                        <div class="tab-pane fade show active row" id="v-pills-home" role="tabpanel"
+                             aria-labelledby="v-pills-home-tab">
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="fname">Họ: </label>
+                                <span id="fname">Bú</span>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="lname">Tên: </label>
+                                <span id="lname">Bú</span>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="email">Email: </label>
+                                <span id="email">Bú</span>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="phone">Điện thoại: </label>
+                                <span id="phone">Bú</span>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="address">Địa chỉ: </label>
+                                <span id="address">Bú</span>
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
-                             aria-labelledby="v-pills-profile-tab">.fff
+                        <div class="tab-pane fade row" id="v-pills-profile" role="tabpanel"
+                             aria-labelledby="v-pills-profile-tab">
+                            <div class="col-md-12">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+
+                            </div>
+                            <p class="mb-3">Đã hoàn thành: <strong>3/100</strong> công việc trong tháng</p>
+
+                            </div>
+                            <div class="col-md-12">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+
+                            </div>
+                            <p class="mb-3">Đã hoàn thành: <strong>4/100</strong> công việc trong tháng</p>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="exp">EXP nhận được: </label>
+                                <span id="exp">199</span> EXP
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
-                             aria-labelledby="v-pills-messages-tab">.nae
+                        <div class="tab-pane fade  row" id="v-pills-messages" role="tabpanel"
+                             aria-labelledby="v-pills-messages-tab">
+                            <div class="col-md-12">
+                                <p class="mb-3">Chương trình đang được phát triển thêm. Cảm ơn <3</p>
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
-                             aria-labelledby="v-pills-settings-tab">lulu
+                        <div class="tab-pane fade row" id="v-pills-settings" role="tabpanel"
+                             aria-labelledby="v-pills-settings-tab">
+                            <div class="col-md-12">
+                                <div id="accordion">
+                                    <div class="card">
+                                        <div class="card-header" id="headingOne">
+                                            <h5 class="mb-0">
+                                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                    Thông báo
+                                                </button>
+                                            </h5>
+                                        </div>
+
+                                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                            <div class="card-body row">
+                                                <div class="col-md-6">
+                                                    <label class="font-weight-bold" for="notifyEmail">Thông báo qua email</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <input type="checkbox" class="check-box" id="notifyEmail" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header" id="headingTwo">
+                                            <h5 class="mb-0">
+                                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                                    Thông báo
+                                                </button>
+                                            </h5>
+                                        </div>
+
+                                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                            <div class="card-body row">
+                                                <div class="col-md-6">
+                                                    <label class="font-weight-bold" for="notifyEmail">Ngôn ngữ</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <select class="select" id="lang">
+                                                        <option value="vi">Việt Nam</option>
+                                                        <option value="en">English</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
