--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -51,7 +51,7 @@
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
                             <div class="col-12 text-center">
-                                <h2>Đặng Anh</h2>
+                                <h2 th:text="${user.getFirstName()} + ' ' + ${user.getLastName()}"></h2>
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
@@ -88,7 +88,7 @@
 
                             <div class="border rounded p-4 bg-white">
                                 <label class="font-weight-bold">Tài khoản</label>
-                                <h3 class="mb-5">VND 70000</h3>
+                                <h3 class="mb-5">VND <span th:text="${payment.getBalance().intValue()}"></span> </h3>
                                 <div>
                                     <button class="btn btn-primary py-2 px-5">Nạp</button>
                                     <button class="btn btn-primary py-2 px-5">Rút</button>
@@ -96,12 +96,9 @@
                             </div>
 
                             <div class="border rounded p-4 bg-white">
-                                <label class="font-weight-bold">Thống kê</label>
-                                <p><span class="border border-warning rounded p-1 px-2 text-warning">Beta</span>
-                                </p>
+                                <label class="font-weight-bold">Đánh giá & Phân loại</label>
+                                <span class="border border-warning rounded p-1 px-2 text-warning">Beta</span>
                                 <p>
-                                    <span class="d-block"><span class="icon-suitcase"></span>&nbsp;&nbsp;<strong>3 công việc đã hoàn thành</strong></span>
-                                    <span class="d-block"><span class="icon-suitcase"></span>&nbsp;&nbsp;<strong>4 công việc chưa hoàn thành</strong></span>
                                     <span class="d-block"><span
                                         class="icon-money mr-1"></span> <span
                                         class="icon-star mr-1"></span></span>
@@ -111,14 +108,14 @@
 
                             <div class="border rounded p-4 bg-white">
                                 <label class="font-weight-bold">Tiến độ</label>
-                                <h3 class="mb-5">EXP 70000</h3>
+                                <h3 class="mb-5">LVL <span th:text="${statistic.getLevel()}"></span></h3>
                                 <div class="progress">
-                                    <div class="progress-bar" style="width:80%"></div>
+                                    <div class="progress-bar" style="width:0%"></div>
                                 </div>
-                                <p class="mb-3">Còn 7 tới cấp tiếp theo</p>
+                                <p class="mb-3">Còn <span th:text="${100 - statistic.getExperience()}"></span> tới cấp tiếp theo</p>
                                 <label class="font-weight-bold">Quyền lợi</label>&nbsp;&nbsp;<small>Cấp càng cao, bạn
                                 càng tiết kiệm chi phí!</small>
-                                <p class="mb-0">Hiện bạn được giảm <strong>5%</strong> phí. Cảm ơn rất nhiều!</p>
+                                <p class="mb-0">Hiện bạn được giảm <strong><span th:text="${statistic.getLevel() - 1}"></span>%</strong> phí. Cảm ơn rất nhiều!</p>
                                 <p class="mb-0">Bạn thuộc hàng chờ ưu tiên <strong>cao</strong></p>
                             </div>
 
@@ -146,23 +143,27 @@
                              aria-labelledby="v-pills-home-tab">
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="fname">Họ: </label>
-                                <span id="fname">Bú</span>
+                                <span id="fname" th:text="${user.getLastName()}"></span>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="lname">Tên: </label>
-                                <span id="lname">Bú</span>
+                                <span id="lname" th:text="${user.getFirstName()}"></span>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="gender">Giới tính: </label>
+                                <span id="gender" th:text="${userInformation.getGender() == 1 ? 'Nam' : 'Nữ'}"></span>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="email">Email: </label>
-                                <span id="email">Bú</span>
+                                <span id="email" th:text="${user.getEmail()}"></span>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="phone">Điện thoại: </label>
-                                <span id="phone">Bú</span>
+                                <span id="phone" th:text="${userInformation.getPhone()}"></span>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="address">Địa chỉ: </label>
-                                <span id="address">Bú</span>
+                                <span id="address" th:text="${userInformation.getAddress()}"></span>
                             </div>
                         </div>
                         <div class="tab-pane fade row" id="v-pills-profile" role="tabpanel"
@@ -172,7 +173,7 @@
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
 
                             </div>
-                            <p class="mb-3">Đã hoàn thành: <strong>3/100</strong> công việc trong tháng</p>
+                                <p class="mb-3">Đã hoàn thành: <strong><span th:text="${statistic.getCompletedTask()}"></span>/100</strong> công việc trong tháng</p>
 
                             </div>
                             <div class="col-md-12">
@@ -180,11 +181,11 @@
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
 
                             </div>
-                            <p class="mb-3">Đã hoàn thành: <strong>4/100</strong> công việc trong tháng</p>
+                            <p class="mb-3">Chưa hoàn thành: <strong><span th:text="${statistic.getIncompletedTask()}"></span></strong> công việc trong tháng</p>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="exp">EXP nhận được: </label>
-                                <span id="exp">199</span> EXP
+                                <span id="exp" th:text="${statistic.getExperience()}"></span> EXP
                             </div>
                         </div>
                         <div class="tab-pane fade  row" id="v-pills-messages" role="tabpanel"
