--- a/src/main/resources/templates/task/create/step3.html
+++ b/src/main/resources/templates/task/create/step3.html
@@ -3,7 +3,7 @@
 <head>
     <title>Create Task</title>
     <th:block th:include="fragment/layout :: head"></th:block>
-    <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
+    <link rel="stylesheet" th:href="@{~/css/task/create.css}">
 </head>
 <body style="overflow: hidden">
 
@@ -76,9 +76,9 @@
                             <div class="row mt-2">
                             <div class="col-lg-7 p-0">
                                 <div class="recommendations__tasker_schedule_modal_tasker">
-                                    <img th:src="@{~/images/person_1.jpg}"
+                                    <img th:src="${taskInfo.tasker.user.user.imageUrl}"
                                          alt="Mahendra B.">
-                                    <div><span>Trần Hiểu Đông</span></div>
+                                    <div><span th:text="${taskInfo.tasker.user.user.firstName  + ' ' + taskInfo.tasker.user.user.lastName}">Trần Hiểu Đông</span></div>
                                 </div>
                                 <div class="border-right box-date">
                                     <div class="calendar__container">
